# Vehicle-Speed-Est

./: CMakeLists.txt  LICENSE
db/: data.txt  data_2.txt  regresion.yaml
src/: data_collecting.cpp  main.cpp  speed_detector.cpp
video/: data.webm
